fix image align

--- a/src/helpers/style/imageNode.scss
+++ b/src/helpers/style/imageNode.scss
@@ -14,6 +14,8 @@
 		width: 100%;
 		height: 100%;
 		border: 0px;
+		top: 0px;
+		left: 0px;
 	}
 }
 
